<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <FrameLayout
        android:id="@+id/fr"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/btn_height" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/btn_height"
        android:orientation="horizontal"
        android:layout_alignParentBottom="true" >

        <Button
            android:id="@+id/btn_fr1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/btn_no_focus"
            android:text="@string/btn_fr1" />

        <Button
            android:id="@+id/btn_fr2"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/btn_no_focus"
            android:text="@string/btn_fr2" />

        <Button
            android:id="@+id/btn_fr3"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/btn_no_focus"
            android:text="@string/btn_fr3" />

    </LinearLayout>

</RelativeLayout>

