<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/ll_balance"
        android:layout_width="match_parent"
        android:layout_height="@dimen/btn_height"
        android:layout_margin="@dimen/margin"
        android:background="@drawable/btn_fr1" >

        <TextView
            android:id="@+id/tv_balance"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/text_size" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="20dp"
        android:background="@drawable/btn_fr1" >

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:orientation="vertical" >

            <EditText
                android:id="@+id/et_expenditure"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:hint="@string/tv_expenditure"
                android:inputType="number" />

            <EditText
                android:id="@+id/et_income"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:hint="@string/tv_income"
                android:inputType="number" />

            <EditText
                android:id="@+id/et_reason"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:hint="@string/tv_reason" />

        </LinearLayout>

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <Button
                android:id="@+id/btn_confirm"
                android:layout_width="@dimen/btn_ok"
                android:layout_height="@dimen/btn_ok"
                android:layout_centerInParent="true"
                android:background="@drawable/btn_ok"
                android:text="@string/btn_confirm"/>

        </RelativeLayout>

    </LinearLayout>

</LinearLayout>